--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>RENTAL</title>
     <link rel="stylesheet" href="stylesheet.css">  
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">  
   </head>
   <body>
     <div class="header">
+      <!-- <span class="fa fa-bars menu-icon"></span> -->
       <div class="header-logo">れんたる</div>
       <div class="header-list">
         <ul>
@@ -63,6 +67,7 @@
           <li>お問い合わせ</li>
         </ul>
       </div>
+      <div class="clear"></div>
     </div>
   </body>
   
